[project]
name = "subjective_screenshot_datasource"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "subjective-abstract-data-source-package @ git+https://github.com/Subjective-Technologies/subjective-abstract-data-source-package.git",
    "brainboost-data-source-logger-package @ git+https://github.com/Subjective-Technologies/brainboost_data_source_logger_package.git",
    "brainboost-configuration-package @ git+https://github.com/Subjective-Technologies/brainboost_configuration_package.git",
    "Pillow>=12.0.0",
]
